--- a/static/style/home.css
+++ b/static/style/home.css
@@ -1,3 +1,10 @@
 .button-home {
     border-bottom: 5px solid #ffffff;
 }
+
+h1 {
+    font-size: 2.5em;
+    font-weight: 700;
+    margin-top: 25%;
+    margin-left: 15%;
+}
